fixed scrollbar

--- a/css/settings.css
+++ b/css/settings.css
@@ -96,6 +96,7 @@ a:hover {
 }
 
 ::-webkit-scrollbar {
+    height: 0px;
     width: 10px;
 }
  
